# TradeSystem

./: .gitignore  CMakeLists.txt  README.md
docs/: readme.txt
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/database/: data.cpp  data.h  database.cpp  database.h  thrpushtofile.cpp  thrpushtofile.h
src/logrec/: CMakeLists.txt  SingltoneCollection.cpp  SingltoneCollection.h  logrec.cpp  logrec.h  putlog.hpp  test_logrec.cpp  test_logrec_c.c
src/neurocpu/: cell.cpp  cell.h  neuron.cpp  neuron.h  perceptron.cpp  perceptron.h
src/tests/: test.cpp  test.h
src/trading/: tcpserver.cpp  tcpserver.h  trademanager.cpp  trademanager.h
